# todolist

./: .copier-answers.yml  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .release-it.json  Dockerfile  README.md  conftest.py  docker-compose.yml  gunicornconf.py  pyproject.toml  renovate.json  secrets.env.in  tox.ini
.gitlab/: webapp.gitlab-ci.yml
frontend/: astro.config.mjs  django-server.mjs  package.json  run-server.mjs  tsconfig.json
frontend/src/: App.tsx  env.d.ts  middleware.ts
frontend/src/layouts/: default.astro
frontend/src/pages/: index.astro  template-test.astro
project/: __init__.py  pipelines.py  systemchecks.py  urls.py  wsgi.py
project/settings/: base.py  developer.py  testing.py
project/test/: runner.py  test_admin.py  test_pipelines.py  test_systemchecks.py  test_urls.py
todolist/: __init__.py  admin.py  apps.py  defaultsettings.py  systemchecks.py
todolist/tests/: test_checks.py
ui/: __init__.py  apps.py  render.py  urls.py  views.py
ui/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ui/frontend/public/: index.html
ui/frontend/scripts/: watch.js
ui/frontend/src/: App.tsx  main.tsx
ui/frontend/src/pages/: index.astro  template-test.astro
ui/tests/: test_views.py
